# nex

./: .gitignore  .gitmodules  CMakeLists.txt  nex.cpp
.github/workflows/: cmake-multi-platform.yml
depend/: Point.cpp  Point.h  cell.cpp  cell.h  gmshEX.h  noiseEX_custom_parser.cpp  noiseEX_custom_parser.h  noiseEx.cpp  noiseEx.h  remesh.h  subCell.cpp  subCell.h
examples/square-washer/: clean.py  loop.geo  loopFIELD.geo  readme.md  settings_washer.json
examples/square-washer/output/: J_washer.vtk  _settings.json  i.txt  loop_test.vtk
test-files/: i.txt  loop_test.vtk
